--- a/.railway/config.yml
+++ b/.railway/config.yml
@@ -1,2 +1,6 @@
-"build:" 
-"  dockerfilePath: \"./Dockerfile\"" 
+# .railway/config.yml
+build:
+  dockerfilePath: "./Dockerfile"
+
+start:
+  command: gunicorn --bind 0.0.0.0:$PORT server:app
